--- a/OracleJETApplication/templates/profile/payroll/payroll-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/payroll/payroll-large.tmpl.html
@@ -1,7 +1,7 @@
 <div class="justifyCenter">
     <div class="oj-row">
         <div class="oj-col oj-md-10">
-            <h2 id="currentPage" data-bind="text: label"></h2>
+            <h2> <span id="currentPage" data-bind="text: label"></span><a href="#"><i class="fa fa-question-circle"></i></a></h2>
         </div>
         <div class="oj-col oj-sm-2 oj-lg-text-align-end">
             <a data-bind="click: function(){$parent.handleOpen('#empPayrollDialog')}" style="line-height:39px;">Edit <i class="fa fa-pencil-square-o"></i></a>
@@ -13,21 +13,16 @@
             <div class="oj-col oj-md-6 oj-lg-12">
                 <div class="oj-col oj-md-6 oj-lg-12">External payroll ID</div>
                <div class="oj-col oj-md-6 oj-lg-12">
-<!--                   <input data-bind="ojComponent: {component: 'ojInputText', value: ''}" />-->
-                        <div class="payrollItems" data-bind="text: $parent.extPayrollId"></div>
+                    <div class="payrollItems" data-bind="text: $parent.extPayrollId"></div>
                </div>
             </div>
              <div class="oj-col oj-md-6 oj-lg-12">
                 <div class="oj-col oj-md-6 oj-lg-12">Options</div>
                 <div id="checkboxOptionsWages" aria-labelledby="mainlabelid" data-bind="ojComponent: {component: 'ojCheckboxset', value: ''}">
                   <span class="oj-choice-row" data-bind="visible: $parent.minimumwage() == 1">
-<!--                    <input id="temp" type="checkbox"  value="$parent.minimumwage">
-                    <label>Allow sub minimum wage</label>-->
                     <i class="fa fa-check"></i><span>Allow sub minimum wage</span>
-                  </span>/
+                  </span>
                   <span class="oj-choice-row" data-bind="visible: $parent.overtimeexempt() == 1">
-<!--                    <input id="partTime" type="checkbox" value="overtime">
-                    <label>Overtime exempt</label>-->
                     <i class="fa fa-check"></i><span>Overtime exempt</span>
                   </span>
                 </div>
@@ -37,7 +32,6 @@
             <h3>I9 Information</h3>
             <div class="oj-col oj-md-6 oj-lg-4">
                 <div>Date of Birth</div>
-<!--                <input data-bind="ojComponent: {component: 'ojInputDate', value: $parent.reHireDate}" />-->
                     <div data-bind="text: $parent.birthDateFormatted()"></div>
                 <div>Child Labor Law Requirements (Age 16)</div>
             </div>
@@ -47,12 +41,10 @@
 
                 <div class="oj-col oj-md-12">Admission Number</div>
                 <div class="oj-col oj-md-12">
-<!--                    <input data-bind="ojComponent: {component: 'ojInputText', value: ''}" />-->
                         <div data-bind="text: $parent.admissionnumber"></div>
                 </div>
                 <div class="oj-col oj-md-12">INS Expiration Date</div>
                 <div class="oj-col oj-md-12">
-<!--                    <input data-bind="ojComponent: {component: 'ojInputText', value: ''}" />-->
                         <div data-bind="text: $parent.insexpirationdateFormatted()"></div>
                 </div>
             </div>
@@ -62,11 +54,6 @@
 <!--                    <input type="password" id="password" data-bind="ojComponent: {component: 'ojInputPassword', value: self.socialnumber}"/>-->
                       <input id="password-disabled" data-bind="ojComponent: {component: 'ojInputPassword', value: $parent.socialsecuritynumber, disabled: true}"/>
                 </div>
-                <div class="oj-col oj-md-6 oj-lg-12">Confirm Social Security Number</div>
-                <div class="oj-col oj-md-6 oj-lg-12">
-<!--                    <input data-bind="ojComponent: {component: 'ojInputText', value: ''}" />-->
-                        <input id="password-disabled" data-bind="ojComponent: {component: 'ojInputPassword', value: $parent.socialsecuritynumber, disabled: true}"/>
-                </div>
             </div>
         </div>
     </div>
@@ -75,37 +62,23 @@
             <h3>Identity Documents</h3>
         </div>
         <div class="oj-col oj-md-12">
-            <div data-bind="text: $parent.identifydocumenttype()"></div>
+            <span class="identityHeader">Selected Identity Documents: </span><span data-bind="text: $parent.identityfilterSelectedType()"></span>
         </div>
-        <hr class="oj-col oj-md-12" />
-        <div class="oj-col oj-md-12">
+        <hr class="oj-col oj-md-12" data-bind="visible: $parent.identityfilterSelectedType() == 'list-b-c'" />
+        <div class="oj-col oj-md-12" data-bind="visible: $parent.identityfilterSelectedType() == 'list-b-c'">
             <div class="oj-col oj-md-12">
-                List B I9 Document Type 
+                <h4>List B I9 Document Type</h4> 
             </div>
             <div class="oj-col oj-md-12 oj-lg-4">
-                <label for="basicSelect">Document Type</label>
-                <select id="basicSelect" data-bind="ojComponent: {component: 'ojSelect', disabled: true,
-                                                                      value: $parent.bi9documenttype,
-                                                                      rootAttributes: {style:'max-width:400px'}}">
-                      <option value="">Please Select</option>
-                      <option value="calicense">Canadian Driver's License</option>
-                      <option value="cdhrecords">Clinic, Doctor, or Hospital Record</option>
-                      <option value="dnschoolrecord">Daycare or Nursery School Record</option>
-                      <option value="driverlicense">Driver's License</option>
-                      <option value="fslidcard">Federal, State, or Local ID Card</option>
-                      <option value="mildepidcard">Military Dependents ID Card</option>
-                      <option value="natamericandoc">Native American Tribal Document</option>
-                      <option value="driverlicense">School ID Card</option>
-                      <option value="recordreportcard">School Record/Report Card</option>
-                      <option value="driverlicense">US Coast Guard merchant</option>
-                      <option value="documentidcard">Employment Authorization Document ID Card</option>
-                    </select>
+
+                <div class="oj-col">Document Type</div>
+                <div class="oj-col" data-bind="text: $parent.bi9TypeSelected"></div>
 
             </div>
             <div class="oj-col oj-md-3 oj-lg-2">
                 <div class="oj-col oj-md-12 oj-lg-12">Document ID</div>
                 <div class="oj-col oj-md-12 oj-lg-12">
-                    <input data-bind="ojComponent: {component: 'ojInputText', disabled: true, value: $parent.bi9documentid}" />
+                    <div data-bind="text:$parent.bi9documentid"></div>
                 </div>
             </div>
             <div class="oj-col oj-md-3 oj-lg-2">
@@ -117,60 +90,45 @@
             <div class="oj-col oj-md-6 oj-lg-4">
                 <div class="oj-col oj-md-12 oj-lg-12">Upload Document Image</div>
                 <div class="oj-col oj-md-8 oj-lg-8">
-                    <input data-bind="ojComponent: {component: 'ojInputText', disabled: true, value: $parent.bi9documentupload}" />
+                    <div data-bind="text:$parent.bi9documentupload"></div>
                 </div>
                 <div class="oj-col oj-md-4 oj-lg-4">
-                        <button id="buttonIcon2" data-bind="ojComponent: {component:'ojButton', 
-                            icons: {start:'oj-fwk-icon-caret-start oj-fwk-icon'}, 
-                            label: 'Browse'
-                }"></button>
+
                 </div>
             </div>
     </div>
     
-    <hr class="oj-col oj-md-12" />
+    <hr class="oj-col oj-md-12" data-bind="visible: $parent.identityfilterSelectedType() == 'list-b-c'" />
             
-    <div class="oj-col oj-md-12">
+    <div class="oj-col oj-md-12" data-bind="visible: $parent.identityfilterSelectedType() == 'list-b-c'">
         <div class="oj-col oj-md-12">
-            List C I9 Document Type 
+            <h4>List C I9 Document Type</h4> 
         </div>
         <div class="oj-col oj-md-12 oj-lg-4">
-            <label for="basicSelect">Document Type</label>
-            <select id="basicSelect" data-bind="ojComponent: {component: 'ojSelect', disabled: true,
-                                                              value: $parent.ci9documenttype,
-                                                              rootAttributes: {style:'max-width:400px'}}">
-              <option value="">Please Select</option>
-              <option value="calicense">Certificate of Birth Abroad</option>
-              <option value="cdhrecords">Employment Authorization Document ID Card</option>
-              <option value="dnschoolrecord">Native American Tribal Document</option>
-              <option value="driverlicense">US Birth Certificate</option>
-              <option value="fslidcard">US Citizen ID Card</option>
-              <option value="ussscard">US Social Security Card</option>
-            </select>
+            <div class="oj-col">Document Type</div>
+            <div class="oj-col" data-bind="text: $parent.ci9TypeSelected"></div>
 
         </div>
         <div class="oj-col oj-md-3 oj-lg-2">
             <div class="oj-col oj-md-12 oj-lg-12">Document ID</div>
             <div class="oj-col oj-md-12 oj-lg-12">
-                <input data-bind="ojComponent: {component: 'ojInputText', disabled: true, value: $parent.ci9documentid}" />
+                <div data-bind="text:$parent.ci9documentid"></div>
             </div>
         </div>
         <div class="oj-col oj-md-3 oj-lg-2">
             <div class="oj-col">Expiration Date</div>
             <div class="oj-col">
                 <div data-bind="text: $parent.ci9documentexpirationFormatted"></div>
+                <div data-bind="text: $parent.ci9documentexpiration"></div>
             </div>
         </div>
         <div class="oj-col oj-md-6 oj-lg-4">
             <div class="oj-col oj-md-12 oj-lg-12">Upload Document Image</div>
             <div class="oj-col oj-md-8 oj-lg-8">
-                <input data-bind="ojComponent: {component: 'ojInputText', disabled: true, value: $parent.ci9documentupload}" />
+                <div data-bind="text:$parent.ci9documentupload"></div>
             </div>
             <div class="oj-col oj-md-4 oj-lg-4">
-                    <button id="buttonIcon2" data-bind="ojComponent: {component:'ojButton', 
-                        icons: {start:'oj-fwk-icon-caret-start oj-fwk-icon'}, 
-                        label: 'Browse'
-            }"></button>
+
             </div>
         </div>
     </div>
@@ -185,26 +143,22 @@
 
             <div class="oj-col oj-md-12 oj-lg-12">Certification Number</div>
             <div class="oj-col oj-md-12 oj-lg-12">
-                <input data-bind="ojComponent: {component: 'ojInputText', disabled: true, value: $parent.certificationnumber}" />
+                <div data-bind="text: $parent.certificationnumber"></div>
             </div> 
         </div>
         <div class="oj-col oj-md-4 oj-lg-4">
             <div class="oj-col oj-md-12 oj-lg-12">Expiration Date</div>
             <div class="oj-col oj-md-12 oj-lg-12">
-<!--                <input data-bind="ojComponent: {component: 'ojInputDate', value: $parent.reHireDate}" />-->
-                <div data-bind="text: $parent.certificationexpirationFormatted"></div>
+                <div data-bind="text: $parent.certificationexpiration"></div>
             </div>
         </div>
         <div class="oj-col oj-md-12 oj-lg-4">
             <div class="oj-col oj-md-12 oj-lg-12">Upload Document Image</div>
             <div class="oj-col oj-md-8 oj-lg-8">
-                <input data-bind="ojComponent: {component: 'ojInputText', disabled: true, value: $parent.agecertupload}" />
+                <div data-bind="text: $parent.agecertupload"></div>
             </div>
             <div class="oj-col oj-md-4 oj-lg-4">
-                    <button id="buttonIcon2" data-bind="ojComponent: {component:'ojButton', 
-                        icons: {start:'oj-fwk-icon-caret-start oj-fwk-icon'}, 
-                        label: 'Browse'
-            }"></button>
+
             </div>
         </div>
     </div>
@@ -218,29 +172,26 @@
 
                <div class="oj-col oj-md-12 oj-lg-12">Permit Number</div>
                <div class="oj-col oj-md-12 oj-lg-12">
-                   <input data-bind="ojComponent: {component: 'ojInputText', disabled: true, value: $parent.workpermitnumber}" />
+                   <div data-bind="text:$parent.workpermitnumber"></div>
                </div>
            </div>
            <div class="oj-col oj-md-4 oj-lg-4">
                <div class="oj-col oj-md-12 oj-lg-12">Expiration Date</div>
                <div class="oj-col oj-md-12 oj-lg-12">
-<!--                   <input data-bind="ojComponent: {component: 'ojInputDate', value: $parent.reHireDate}" />-->
-                    <div data-bind="text: $parent.workpermitexpirationFormatted"></div>
+                    <div data-bind="text: $parent.workpermitexpiration"></div>
                </div>
            </div>
            <div class="oj-col oj-md-4 oj-lg-4">
                <div class="oj-col oj-md-12 oj-lg-12">Upload Document Image</div>
                <div class="oj-col oj-md-8 oj-lg-8">
-                   <input data-bind="ojComponent: {component: 'ojInputText', disabled: true, value: $parent.workpermitupload}" />
+                   <div data-bind="text:$parent.workpermitupload"></div>
                </div>
                <div class="oj-col oj-md-4 oj-lg-4">
-                       <button id="buttonIcon2" data-bind="ojComponent: {component:'ojButton', 
-                           icons: {start:'oj-fwk-icon-caret-start oj-fwk-icon'}, 
-                           label: 'Browse'
-               }"></button>
+
                </div>
            </div>
         </div>
     </div>
 </div>
+    
 <div data-bind="template: {name: 'partials/employee-payroll-edit-modal/employee-payroll-edit-modal-large'}"></div>
