updated modal for current and upcoming shift details

--- a/OracleJETApplication/templates/profile/schedules-timecards/current-week-modal/current-week-modal-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/schedules-timecards/current-week-modal/current-week-modal-large.tmpl.html
@@ -1,7 +1,7 @@
 <div style="display:none" id="currentWeekModal" title="" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', rootAttributes: {class: 'scheduleModal-dimensions'}, 'position': {'my': 'start bottom', 'at': 'end+14 top'}}">
     <div class="oj-dialog-header oj-helper-clearfix" aria-labelledby="dialogTitleId">
         <span id="dialogTitleId" class="oj-dialog-title">
-            <h2>Shift Detail <span data-bind="text: $parent.firstName() + ' ' + $parent.lastName()"></span></h2>
+            <h2>Current Shift Detail <span data-bind="text: $parent.firstName() + ' ' + $parent.lastName()"></span></h2>
         </span>
     </div>
     <div class="oj-dialog-body">
