updated added a class to the parent template for mobile

--- a/OracleJETApplication/templates/gift-loyalty.tmpl.html
+++ b/OracleJETApplication/templates/gift-loyalty.tmpl.html
@@ -74,4 +74,4 @@
     </div>
 </script>
 
-<div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
+<div class="templateArea" data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
