--- a/OracleJETApplication/templates/people.tmpl.html
+++ b/OracleJETApplication/templates/people.tmpl.html
@@ -49,8 +49,4 @@
 
 </script>
 
-
-
-
-
-<div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
+<div class="templateArea"  data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
